<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_down_1"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/common_top_bar_blue" >

        <ImageView
            android:id="@+id/button_register_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="注册"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/textTheme1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="昵称:" />

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_edittext"
            android:hint="@string/edittext_register_username"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/textTheme1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/text_register_password" />

        <EditText
            android:id="@+id/ed_register_password"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_edittext"
            android:hint="@string/edittext_register_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/textTheme1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/text_register_password_again" />

        <EditText
            android:id="@+id/ed_register_repassword"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_edittext"
            android:hint="@string/edittext_register_password_again"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/textTheme1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/text_register_phone" />

        <EditText
            android:id="@+id/ed_register_phone"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_edittext"
            android:hint="@string/edittext_register_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/textTheme1"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/text_register_email" />

        <EditText
            android:id="@+id/ed_register_email"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_edittext"
            android:hint="@string/edittext_register_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_register_enter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_login_button"
        android:text="登入" />

</LinearLayout>