<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/theme_bg"
              android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/common_top_bar_blue">

        <ImageView
                android:id="@+id/iv_alter_back"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:onClick="back"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/top_bar_back"/>

        <View
                android:id="@+id/view_temp"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/iv_alter_back"
                android:background="#5E9aa5"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/title_alter"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/my_layout_alter_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true"
            android:paddingLeft="12dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:text="@string/text_alter_name"
                android:textColor="#353535"
                android:textSize="16sp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="12dp"
                android:background="#dadada"/>

        <TextView
                android:id="@+id/ed_alter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/my_layout_alter_sex"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true"
            android:paddingLeft="12dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"

                android:text="@string/text_alter_gender"
                android:textColor="#353535"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/ed_alter_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/re_money_bag"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true"
            android:paddingLeft="12dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:text="@string/text_alter_phone"
                android:textColor="#353535"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/ed_alter_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="12dp"
                android:background="#dadada"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/my_layout_alter_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true"
            android:paddingLeft="12dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:text="@string/text_alter_password"
                android:textColor="#353535"
                android:textSize="16sp"/>
    </RelativeLayout>

</LinearLayout>